added Powers form

--- a/COMP1004-W2017-Lesson6/COMP1004-W2017-Lesson6.csproj
+++ b/COMP1004-W2017-Lesson6/COMP1004-W2017-Lesson6.csproj
@@ -85,6 +85,12 @@
     <Compile Include="OptionsForm.Designer.cs">
       <DependentUpon>OptionsForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="PowersForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PowersForm.Designer.cs">
+      <DependentUpon>PowersForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="SplashForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -104,6 +110,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="OptionsForm.resx">
       <DependentUpon>OptionsForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PowersForm.resx">
+      <DependentUpon>PowersForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="SplashForm.resx">
       <DependentUpon>SplashForm.cs</DependentUpon>
